hphp/hack/test/decl/array_typehints.php.typecheck.exp
File "array_typehints.php", line 35, characters 17-32:
Too many type arguments for this type (Naming[2065])
